# cmake_learning

./: readme.markdown
Step1/: CMakeLists.txt  Tutorial.cpp
Step1_build/: CMakeCache.txt  Makefile  Tutorial  cmake_install.cmake
Step2/: CMakeLists.txt
Step2/MathFunctions/: CMakeLists.txt
Step3/: CMakeLists.txt  Tutorial.cpp
Step3/MathFunctions/: CMakeLists.txt  MathFunctions.h  mysqrt.cpp
